Closed Bug 666714 Opened 14 years ago Closed 14 years ago

GCC 4.6 warning: nsScanner.cpp:305:25: warning: variable ‘start’ set but not used [-Wunused-but-set-variable]

Categories

(Core :: DOM: HTML Parser, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla7

People

(Reporter: dholbert, Assigned: dholbert)

Details

(Whiteboard: [build_warning])

Attachments

(1 file)

When building with GCC 4.6: nsScanner.cpp: In member function ‘nsresult nsScanner::Append(const char*, PRUint32, nsIRequest*)’: nsScanner.cpp:305:25: warning: variable ‘start’ set but not used [-Wunused-but-set-variable]
Attached patch fixSplinter Review
Assignee: nobody → dholbert
Status: NEW → ASSIGNED
Attachment #541469 - Flags: review?(hsivonen)
Comment on attachment 541469 [details] [diff] [review] fix Seems safe enough for me to r+ this though this is mrbkap's area.
Attachment #541469 - Flags: review?(hsivonen) → review+
Whiteboard: [build_warning] → [build_warning][inbound]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Whiteboard: [build_warning][inbound] → [build_warning]
Target Milestone: --- → mozilla7
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: