Bug 666714: Remove unused variable 'start' from nsScanner::Append. r=hsivonen